# QuackEngine

./: CMakeLists.txt  README.md  imgui.ini
res/shaders/: Basic.shader
src/: Assert.h  Engine.cpp  Engine.h  IndexBuffer.cpp  IndexBuffer.h  Log.cpp  Log.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  UI.cpp  UI.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h  main.cpp
